--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,14 @@ asgiref==3.7.2
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+cloudinary==1.40.0
 cryptography==42.0.2
 defusedxml==0.8.0rc2
 distlib==0.3.8
 Django==3.2
+django-cloudinary-storage==0.3.0
+django-cors-headers==4.3.1
+django-environ==0.9.0
 django-filter==23.5
 django-graphql-jwt==0.4.0
 django-graphql-social-auth==0.1.4
@@ -28,6 +32,7 @@ python3-openid==3.2.0
 pytz==2024.1
 requests==2.31.0
 requests-oauthlib==1.3.1
+setuptools==69.2.0
 six==1.16.0
 social-auth-app-django==5.4.0
 social-auth-core==4.5.2
