--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,8 @@ oauthlib==3.2.2
 Pillow==10.1.0
 platformdirs==4.2.0
 promise==2.3
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pycparser==2.21
 PyJWT==2.8.0
 python3-openid==3.2.0
