--- a/requirements.txt
+++ b/requirements.txt
@@ -21,8 +21,10 @@ graphene-django==3.1.5
 graphene-file-upload==1.3.0
 graphql-core==3.2.3
 graphql-relay==3.2.0
+gunicorn==22.0.0
 idna==3.6
 oauthlib==3.2.2
+packaging==24.0
 Pillow==10.1.0
 platformdirs==4.2.0
 promise==2.3
